force-app/main/default/objects/Case/fields/DB_Hours__c.field-meta.xml
<CustomField>
    <fullName>DB_Hours__c</fullName>
    <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
    <label>DB Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>