force-app/main/default/objects/Case/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <formula>IMAGE(CASE(Status, 
&quot;New&quot;, &quot;/resource/Case_Indicator/Status-New.png&quot;, 
&quot;Escalated&quot;, &quot;/resource/Case_Indicator/Status-Escalated.png&quot;, 
&quot;On Hold&quot;, &quot;/resource/Case_Indicator/Status-Researching.png&quot;, 
&quot;Closed&quot;, &quot;/resource/Case_Indicator/Status-Closed.png&quot;, 
&quot;/resource/Case_Indicator/Status-Responded.png&quot;),&quot;&quot;,18,18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>