force-app/main/default/objects/Case/fields/Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment__c</fullName>
    <label>Last Payment</label>
    <type>Date</type>
</CustomField>