force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IMAGE(CASE(Origin,
&quot;Chatter Answers&quot;, &quot;/resource/Case_Source/chatter_answers_logo.png&quot;, 
&quot;Email&quot;, &quot;/resource/Case_Source/email_icon.png&quot;, 
&quot;Phone&quot;, &quot;/resource/Case_Source/phone_icon.png&quot;, 
&quot;Facebook&quot;, &quot;/resource/Case_Source/facebook_icon.png&quot;, 
&quot;Twitter&quot;, &quot;/resource/Case_Source/twitter_icon.png&quot;, 
&quot;Website&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;Google&quot;, &quot;/resource/Case_Source/google.gif&quot;, 
&quot;Chat&quot;, &quot;/resource/Case_Source/chat_icon.png&quot;, 
&quot;Portal&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;/resource/Case_Source/website_icon.png&quot;),&quot;&quot;,18,18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>