force-app/main/default/objects/Case/recordTypes/Technical_Issue.recordType-meta.xml
<RecordType>
    <fullName>Technical_Issue</fullName>
    <active>true</active>
    <businessProcess>Technical Issue</businessProcess>
    <description>Technical investigations and troubleshooting</description>
    <label>Technical Issue</label>
</RecordType>