force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Indicator__c</columns>
    <columns>Source__c</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
</ListView>