force-app/main/default/objects/Case/listViews/Tier_1_Queue.listView-meta.xml
<ListView>
    <fullName>Tier_1_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Source__c</columns>
    <filterScope>Queue</filterScope>
    <label>Tier 1 Queue</label>
    <queue>Tier_1_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>